--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 v1.6.0
 -----------------------
+- dnsmasq CMN.conf uses pit.can as an interface
+- CASMINST-3335 VLAN 0 breaks Kea
 - CASMINST-2120 Remove gateway bypass
 - 1.16.3 update
 - formatting from go tidy
